[package]
name = "l-systems"
description = ""
repository = ""
license = "NONE"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
gloo-timers = { version = "0.3.0", features = ["futures"] }
pest = "2.7.11"
pest_derive = "2.7.11"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "CanvasRenderingContext2d",
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MouseEvent",
    "Window",
    "WheelEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
js-sys = "0.3.69"
